# atlidreader

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: create_dev_conda_env.bash
src/atlidreader/: __init__.py
src/atlidreader/cli/: atlidtonetcdf.py
src/atlidreader/readers/: atlid2a.py  core.py  factory.py
src/atlidreader/utilities/: xarray.py
